--- a/css/styles.css
+++ b/css/styles.css
@@ -148,9 +148,9 @@ margin-left: auto;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button:hover,
+.button:hover ,
 .button:focus {
-    background:#404BBF;
+    background-color: #404BBF;
     cursor: pointer;
 }
 .list-features-icon {
@@ -424,4 +424,140 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     gap: 16px;
     align-items: center;
     justify-content: center;
+}
+.form-footer {
+    display: flex;
+    gap: 24px;
+}
+.form-footer-label {
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+}
+.form-footer-button {
+    color: #FFF;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.64px;
+    border-radius: 4px;
+    background: #4D5AE5;
+    cursor: pointer;
+    height: 40px;
+    min-width: 165px;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-footer-button:hover ,
+.form-footer-button:focus {
+    background-color:#404bbf;
+}
+.form-input {
+    width: 264px;
+    height: 40px;
+    background: #2E2F42;
+    border-radius: 4px;
+    border: 1px solid #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.form-input::placeholder {
+    color:#FFF;
+    font-family: inherit;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.48px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+}
+.backdrop {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background:rgba(46, 47, 66, 0.40);
+
+}
+.modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 24px;
+    border-radius: 4px;
+    background: #FCFCFC;
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.modal-close-btn {
+    margin-left: auto;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    top: 24px;
+    right: 24px;
+    border-radius: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    background-color:  #E7E9FC;
+}
+.modal-title {
+    color: #2E2F42;
+    font-family: inherit;
+    width: 360px;
+    padding-top: 48px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    margin-bottom: 16px;
+}
+.modal-form {
+    display: flex;
+    width: 360px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+}
+.form-label {
+    color: #8E8F99;
+    font-family: inherit;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.48px;
+}
+.modal-input {
+    width: 360px;
+    height: 58px;
+    padding-left: 16px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+}
+.modal-input-textarea {
+    width: 360px;
+    height: 120px;
+    padding-left: 16px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+}
+.modal-input-textarea::placeholder {
+    color: rgba(46, 47, 66, 0.40);
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.48px;
 }
