--- a/css/styles.css
+++ b/css/styles.css
@@ -429,7 +429,7 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     display: flex;
     gap: 24px;
 }
-.form-footer-label {
+.form-footer-title {
     color: #FFF;
     font-size: 16px;
     font-weight: 500;
