--- a/css/styles.css
+++ b/css/styles.css
@@ -507,8 +507,8 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     position: absolute;
     top: 50%;
     left: 50%;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translate(-50%,-50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn {
     margin-left: auto;
@@ -523,7 +523,6 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     cursor: pointer;
     padding: 0;
     border-radius: 50%;
-    border-radius: 50px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     border: 1px solid rgba(0, 0, 0, 0.10);
     background-color:  #E7E9FC;
@@ -557,15 +556,15 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     flex-direction: column;
     align-items: flex-start;
 }
-.modal-item-label {
-    gap: 8px;
+.modal-item {
+    margin-bottom: 8px; 
 }
 .form-label {
     color: #8E8F99;
     font-family: inherit;
     font-size: 12px;
     font-weight: 400;
-    line-height: 14px;
+    line-height: 1.17;
     letter-spacing: 0.48px;
     display: block;
     margin-bottom: 4px;
@@ -593,7 +592,8 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     transform: translateY(-50%); 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.input-icon:focus {
+.input-icon:focus ,
+.input-icon:hover {
     fill: #4D5AE5;
 }
 .modal-input-text {
