--- a/css/styles.css
+++ b/css/styles.css
@@ -300,7 +300,6 @@ transform: translateY(100%);
 .list-item-portf:focus .overlay-text {
 transform: translateY(0);
 }
-
 .list-item-project-name {
     color:#2E2F42;
     font-size: 20px;  
@@ -529,15 +528,10 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
 }
 .modal-close-btn:hover ,
 .modal-close-btn:focus {
-    background-color: #404bbf;
-    border: none;
+    fill: #ffffff;
 }
 .modal-bth-icon {
-    fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-bth-icon:hover ,
-.modal-bth-icon:focus {
-    fill: #ffffff;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-title {
     color: #2E2F42;
