--- a/css/styles.css
+++ b/css/styles.css
@@ -590,18 +590,49 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
 .input-icon:hover {
     fill: #4D5AE5;
 }
-.modal-input-text {
+.modal-input-textarea {
     width: 360px;
+    color: rgba(46, 47, 66, 0.4);
     height: 120px;
-    padding-left: 16px;
+    font-size: 12px; 
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
     border-radius: 4px;
+    background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.40);
 }
-.modal-input-text::placeholder {
-    color: rgba(46, 47, 66, 0.40);
-    font-family: Roboto;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 0.48px;
+.modal-input-textarea:focus {
+    border-color: #4D5AE5;
+}
+.form-text {
+    margin-bottom: 24px; 
+}
+.label-chb {
+    color:#8e8f99;
+    font-size: 12px; 
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+}
+.label-chb-span {
+    width: 16px;
+    height: 16px; 
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center; 
+    fill: transparent;
+    margin-right: 8px;
+}
+.label-chb-span:checked {
+    background-color: #404bbf;
+    border: none;
+    fill:#F4F4FD;
+}
+.label-chb-privacy {
+color: #4d5ae5;
 }
