--- a/css/styles.css
+++ b/css/styles.css
@@ -529,6 +529,8 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
 .modal-close-btn:hover ,
 .modal-close-btn:focus {
     fill: #ffffff;
+    background-color: #404bbf;
+    border: none;
 }
 .modal-bth-icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -606,18 +608,13 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     border-radius: 4px;
     background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.40);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input-textarea:focus {
     border-color: #4D5AE5;
 }
 .form-text {
     margin-bottom: 24px; 
-}
-.label-chb {
-    color:#8e8f99;
-    font-size: 12px; 
-    line-height: 1.17;
-    letter-spacing: 0.04em;
 }
 .label-chb-span {
     width: 16px;
@@ -630,8 +627,15 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     justify-content: center; 
     fill: transparent;
     margin-right: 8px;
+
 }
-.label-chb-span:checked {
+.label-chb {
+    color:#8e8f99;
+    font-size: 12px; 
+    line-height: 1.17;
+    letter-spacing: 0.04em
+}
+.visually-hidden-input:checked .label-chb-span {
     background-color: #404bbf;
     border: none;
     fill:#F4F4FD;
@@ -639,3 +643,9 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
 .label-chb-privacy {
 color: #4d5ae5;
 }
+.visually-hidden-input {
+    position: absolute;
+    width: 1px; height: 1px; margin: -1px;
+    border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;}
