--- a/css/styles.css
+++ b/css/styles.css
@@ -634,7 +634,7 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     line-height: 1.17;
     letter-spacing: 0.04em
 }
-.visually-hidden-input:checked .label-chb-span {
+.visually-hidden:checked .label-chb-span {
     background-color: #404bbf;
     border: none;
     fill:#F4F4FD;
@@ -642,9 +642,22 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
 .label-chb-privacy {
 color: #4d5ae5;
 }
-.visually-hidden-input {
-    position: absolute;
-    width: 1px; height: 1px; margin: -1px;
-    border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;}
+.button-modal {
+    font-family: inherit;
+    color: #ffffff;
+    font-weight: 500;
+    background: #4D5AE5;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    font-size: 16px;
+    cursor: pointer;
+    display: block;
+    height: 56px;
+    min-width: 169px;
+    align-items: flex-start;
+    margin: 0 auto;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
