--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,7 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
 }
 .modal-input:focus {
     border-color: #4D5AE5;
+    fill: #4D5AE5;
 }
 .input-icon {
     position: absolute;
@@ -587,10 +588,6 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     top: 50%;
     transform: translateY(-50%); 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-icon:focus ,
-.input-icon:hover {
-    fill: #4D5AE5;
 }
 .modal-item-textarea {
     margin-bottom: 16px 
@@ -625,22 +622,26 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     display: inline-flex;
     align-items: center;
     justify-content: center; 
-    fill: transparent;
     margin-right: 8px;
+    background-color: #404bbf;
+    border: none;
+    fill:#F4F4FD;
 }
+
 .label-chb {
     color:#8e8f99;
     font-size: 12px; 
     line-height: 1.17;
     letter-spacing: 0.04em
 }
-.visually-hidden[label-chb-span]:checked  {
-    background-color: #404bbf;
-    border: none;
-    fill:#F4F4FD;
-}
 .label-chb-privacy {
-color: #4d5ae5;
+color: #4D5AE5;
+font-family: inherit;
+font-size: 12px;
+font-weight: 400;
+line-height: 16px;
+letter-spacing: 0.48px;
+text-decoration-line: underline;
 }
 .button-modal {
     font-family: inherit;
@@ -660,4 +661,9 @@ color: #4d5ae5;
     border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-modal:hover ,
+.button-modal:focus {
+    background-color: #404BBF;
+    cursor: pointer;
 }
