--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ margin-left: auto;
     background-position: center;
     background-color: #2E2F42;
     padding: 188px 0;
+    margin: auto;
 }
 .slogan {
     color:#FFF;
@@ -575,8 +576,8 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     border-radius: 4px;
     background-color: transparent;
     outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid rgba(46, 47, 66, 0.40);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus {
     border-color: #4D5AE5;
@@ -586,7 +587,6 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     position: absolute;
     left: 16px;
     top: 50%;
-    fill: #4D5AE5;
     transform: translateY(-50%); 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -617,17 +617,17 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
 .label-chb-span {
     width: 16px;
     height: 16px; 
-    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: inline-flex;
     align-items: center;
     justify-content: center; 
-    fill: transparent; 
     margin-right: 8px;
     background-color: #404bbf;
     border: none; 
+    border: 1px solid rgba(46, 47, 66, 0.4);
     fill: #F4F4FD;
+    fill: transparent; 
 }
 
 .label-chb {
