--- a/css/styles.css
+++ b/css/styles.css
@@ -579,9 +579,12 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     border: 1px solid rgba(46, 47, 66, 0.40);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus {
+.modal-input:focus+.input-icon {
     border-color: #4D5AE5;
     fill: #4D5AE5; 
+}
+.modal-input:focus {
+    border-color: #4D5AE5;
 }
 .input-icon {
     position: absolute;
@@ -633,7 +636,7 @@ background: lightgray -25.026px 0px / 125% 100% no-repeat;
     line-height: 1.17;
     letter-spacing: 0.04em
 }
-.check-input:checked.label-chb-span {
+.check-input:checked + label span {
     fill: #F4F4FD;
     background-color: #404bbf;
     border: none; 
